# wire-grad

problib/include/problib/pdfs/: Gaussian.h
problib/src/pdfs/: Gaussian.cpp
video_processing/: CMakeLists.txt  package.xml
video_processing/src/: DetectImage.cpp  DisplayImage.cpp  TuningDetection.cpp
wire_core/: CMakeLists.txt
wire_core/include/wire/core/: ClusterStorage.h  Evidence.h  EvidenceStorage.h
wire_core/include/wire/logic/: HypothesesTree.h  Hypothesis.h
wire_core/include/wire/storage/: EvidenceStorage.h  ObjectStorage.h  SemanticObject.h  TrailStorage.h
wire_core/models/: world_object_models.xml
wire_core/src/: WorldModelROS.cpp
wire_core/src/core/: ClusterStorage.cpp  Evidence.cpp  EvidenceStorage.cpp
wire_core/src/logic/: HypothesesTree.cpp  Hypothesis.cpp
wire_core/src/storage/: EvidenceStorage.cpp  KnowledgeDatabase.cpp  ObjectStorage.cpp  SemanticObject.cpp  TrailStorage.cpp
wire_tutorials/: CMakeLists.txt
wire_tutorials/config/: rviz_world_model_kinetic.rviz
wire_tutorials/src/: checkers.cpp  generate_evidence.cpp
wire_viz/parameters/: detections.yaml
wire_viz/src/: Visualizer.cpp
